--- a/android/Euro2012/res/layout/matchdetail.xml
+++ b/android/Euro2012/res/layout/matchdetail.xml
@@ -28,11 +28,15 @@
             android:text="@string/matchdetail"
             android:textColor="#fff"
             android:textSize="28dip" />
+
         <ImageButton
-            android:id="@+id/btnView" android:src="@drawable/btnview"
-            android:layout_width="64dip" android:paddingBottom="5dip"
-            android:layout_height="fill_parent" android:paddingTop="2dip"
-            android:background="#00000000" />
+            android:id="@+id/btnView"
+            android:layout_width="64dip"
+            android:layout_height="fill_parent"
+            android:background="#00000000"
+            android:paddingBottom="5dip"
+            android:paddingTop="2dip"
+            android:src="@drawable/btnview" />
     </LinearLayout>
 
     <LinearLayout
@@ -45,9 +49,10 @@
 
         <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="238dip" android:scrollbars="none"
+            android:layout_height="238dip"
             android:background="@drawable/bgwhite"
-            android:padding="0dip">
+            android:padding="0dip"
+            android:scrollbars="none" >
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -66,10 +71,11 @@
                     android:weightSum="5" >
 
                     <ImageView
-                        android:id="@+id/flag1" android:paddingLeft="20dip"
+                        android:id="@+id/flag1"
                         android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
+                        android:paddingLeft="20dip"
                         android:src="@drawable/ic_launcher" />
 
                     <LinearLayout
@@ -85,10 +91,11 @@
                             android:id="@+id/score"
                             android:layout_width="fill_parent"
                             android:layout_height="0dip"
+                            android:layout_marginTop="5dip"
                             android:layout_weight="1"
                             android:background="#e9efe9"
                             android:gravity="center_vertical|center_horizontal"
-                            android:text="10-10" android:layout_marginTop="5dip"
+                            android:text="10-10"
                             android:textColor="#f00"
                             android:textSize="20dip" />
 
@@ -124,10 +131,11 @@
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/flag2" android:paddingRight="20dip"
+                        android:id="@+id/flag2"
                         android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
+                        android:paddingRight="20dip"
                         android:src="@drawable/ic_launcher" />
                 </LinearLayout>
 
@@ -139,11 +147,12 @@
                     android:weightSum="5" >
 
                     <TextView
-                        android:id="@+id/name1" android:paddingLeft="20dip"
+                        android:id="@+id/name1"
                         android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal"
+                        android:paddingLeft="20dip"
                         android:text="CZECH REPUBLIC"
                         android:textColor="#333"
                         android:textSize="14dip"
@@ -155,11 +164,12 @@
                         android:layout_weight="1" />
 
                     <TextView
-                        android:id="@+id/name2" android:paddingRight="20dip"
+                        android:id="@+id/name2"
                         android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal"
+                        android:paddingRight="20dip"
                         android:text="CZECH REPUBLIC"
                         android:textColor="#333"
                         android:textSize="14dip"
@@ -175,11 +185,12 @@
                     android:weightSum="5" >
 
                     <LinearLayout
-                        android:layout_width="0dip" android:paddingLeft="20dip"
+                        android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal|center_vertical"
-                        android:orientation="horizontal" >
+                        android:orientation="horizontal"
+                        android:paddingLeft="20dip" >
 
                         <Button
                             android:id="@+id/btnvote1"
@@ -198,11 +209,12 @@
                         android:layout_weight="1" />
 
                     <LinearLayout
-                        android:layout_width="0dip" android:paddingRight="20dip"
+                        android:layout_width="0dip"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal|center_vertical"
-                        android:orientation="horizontal" >
+                        android:orientation="horizontal"
+                        android:paddingRight="20dip" >
 
                         <Button
                             android:id="@+id/btnvote2"
@@ -243,7 +255,8 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet11"
+                        <TextView
+                            android:id="@+id/txtbet11"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
@@ -256,7 +269,8 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet12"
+                        <TextView
+                            android:id="@+id/txtbet12"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -269,7 +283,8 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet13"
+                        <TextView
+                            android:id="@+id/txtbet13"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -291,7 +306,8 @@
                         <TextView
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
-                            android:layout_weight="4" android:background="#e9efe9"
+                            android:layout_weight="4"
+                            android:background="#e9efe9"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="@string/betEuro"
                             android:textColor="#333" />
@@ -301,10 +317,12 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet21"
+                        <TextView
+                            android:id="@+id/txtbet21"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
-                            android:layout_weight="1"  android:background="#e9efe9"
+                            android:layout_weight="1"
+                            android:background="#e9efe9"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="2.55"
                             android:textColor="#333" />
@@ -314,12 +332,14 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet22"
+                        <TextView
+                            android:id="@+id/txtbet22"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
+                            android:background="#e9efe9"
                             android:gravity="center_vertical|center_horizontal"
-                            android:text="2.55"  android:background="#e9efe9"
+                            android:text="2.55"
                             android:textColor="#333" />
 
                         <LinearLayout
@@ -327,10 +347,12 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet23"
+                        <TextView
+                            android:id="@+id/txtbet23"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
-                            android:layout_weight="1"  android:background="#e9efe9"
+                            android:layout_weight="1"
+                            android:background="#e9efe9"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="2.55"
                             android:textColor="#333" />
@@ -359,7 +381,8 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet31"
+                        <TextView
+                            android:id="@+id/txtbet31"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
@@ -372,7 +395,8 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet32"
+                        <TextView
+                            android:id="@+id/txtbet32"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -385,7 +409,8 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView android:id="@+id/txtbet33"
+                        <TextView
+                            android:id="@+id/txtbet33"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -393,52 +418,93 @@
                             android:text="2.55"
                             android:textColor="#333" />
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="1px"
                         android:background="#9eb399" />
-
                 </LinearLayout>
-                
-                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:layout_marginTop="10dip" android:orientation="vertical">
-                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
-                            <TextView android:layout_width="0dip" android:layout_height="wrap_content"
-                                android:text="@string/arbitration" android:layout_weight="1"
-                                android:gravity="right" android:layout_marginRight="10dip"
-                                android:textColor="#000"/>
-                            <TextView android:layout_width="1dip" android:layout_height="wrap_content"
-                                android:text="Vu Minh Tri" android:layout_weight="1"
-                                android:textColor="#000" android:id="@+id/referee"/>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dip"
+                    android:orientation="vertical" >
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content" >
+
+                        <TextView
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dip"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="@string/arbitration"
+                            android:textColor="#000" />
+
+                        <TextView
+                            android:id="@+id/referee"
+                            android:layout_width="1dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Vu Minh Tri"
+                            android:textColor="#000" />
                     </LinearLayout>
-                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
-                            <TextView android:layout_width="0dip" android:layout_height="wrap_content"
-                                android:text="@string/stadium" android:layout_weight="1"
-                                android:gravity="right" android:layout_marginRight="10dip"
-                                android:textColor="#000"/>
-                            <TextView android:layout_width="1dip" android:layout_height="wrap_content"
-                                android:text="Nou Camp" android:layout_weight="1"
-                                android:textColor="#000" android:id="@+id/stadium"/>
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content" >
+
+                        <TextView
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dip"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="@string/stadium"
+                            android:textColor="#000" />
+
+                        <TextView
+                            android:id="@+id/stadium"
+                            android:layout_width="1dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Nou Camp"
+                            android:textColor="#000" />
                     </LinearLayout>
-                    <LinearLayout android:layout_width="fill_parent" android:layout_height="300dip"
-                        android:layout_marginBottom="5dip" android:id="@+id/llwvcontainer">
-                    	<WebView android:layout_width="fill_parent" android:layout_height="fill_parent"
-                        	android:id="@+id/wvcomment"/>
+
+                    <LinearLayout
+                        android:id="@+id/llwvcontainer"
+                        android:layout_width="fill_parent"
+                        android:layout_height="300dip"
+                        android:layout_marginBottom="5dip" >
+
+                        <WebView
+                            android:id="@+id/wvcomment"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
-        <LinearLayout
-            android:id="@+id/llevent"
+        <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:layout_marginTop="10dip"
-            android:layout_weight="1"
-            android:background="@drawable/bgwhite"
-            android:gravity="center"
-            android:orientation="vertical" >
-        </LinearLayout>
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:id="@+id/llevent"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bgwhite"
+                android:gravity="center"
+                android:orientation="vertical" >
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </LinearLayout>
